--- a/prologin/gcc/templates/gcc/application_index.html
+++ b/prologin/gcc/templates/gcc/application_index.html
@@ -32,6 +32,7 @@
           <a class="btn" href="#">Reject all</a>
         </div>
         <div class="detail-section">
+          <h1>Profile</h1>
           <table class="recap">
             <tr>
               <td>email</td>
@@ -48,7 +49,8 @@
           </table>
         </div>
         <div class="detail-section">
-          <ul style="list-style: decimal; font-size: 20px;">
+          <h1>Events</h1>
+          <ul style="list-style: decimal;">
             <li>
               <span>Paris I <small>(17/05/2018)</small></span>
               <span style="float:right">
@@ -66,8 +68,40 @@
           </ul>
         </div>
         <div class="detail-section">
+          <h1>Comments</h1>
           Here is a review written by a staff member who already read this application.
           This could also be implemented like some kind of comment section?
+        </div>
+        <div class="detail-section">
+          <h1>Form</h1>
+          <div class="question">
+            <h5>This is a question ?</h5>
+            <p>
+              This is the answer to a question, this could be quite long so let's lorem ! <br/>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget metus sodales tellus placerat aliquet. Phasellus iaculis erat sed commodo porttitor. Suspendisse ut lectus pretium, elementum eros sit amet, rutrum tellus. Morbi sodales tincidunt diam, id fermentum nisi. Donec at nunc a augue rhoncus sollicitudin. Nulla vulputate, leo convallis mattis iaculis, velit quam hendrerit tellus, quis lacinia tellus elit eu leo. Nam vitae leo at ligula eleifend facilisis in tincidunt turpis. Quisque tempus sem eget diam dignissim, vitae convallis nunc posuere. Nam vel tortor nibh. Nullam pretium mattis ipsum quis mollis. Donec ac vulputate lorem, quis pulvinar lectus.
+            </p>
+            <h5>This is a short question ?</h5>
+            <p>
+              Yes
+            </p>
+            <h5>This is a question ?</h5>
+            <p>
+              This is the answer to a question, this could be quite long so let's lorem ! <br/>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget metus sodales tellus placerat aliquet. Phasellus iaculis erat sed commodo porttitor. Suspendisse ut lectus pretium, elementum eros sit amet, rutrum tellus. Morbi sodales tincidunt diam, id fermentum nisi. Donec at nunc a augue rhoncus sollicitudin. Nulla vulputate, leo convallis mattis iaculis, velit quam hendrerit tellus, quis lacinia tellus elit eu leo. Nam vitae leo at ligula eleifend facilisis in tincidunt turpis. Quisque tempus sem eget diam dignissim, vitae convallis nunc posuere. Nam vel tortor nibh. Nullam pretium mattis ipsum quis mollis. Donec ac vulputate lorem, quis pulvinar lectus.
+            </p>
+            <h5>This is a short question ?</h5>
+            <p>
+              Yes
+            </p>
+            <h5>This is a short question ?</h5>
+            <p>
+              No
+            </p>
+            <h5>This is a short question ?</h5>
+            <p>
+              Yes
+            </p>
+          </div>
         </div>
       </div>
     </li>
