stype: add a max width to images in problems statements and samples

--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -558,6 +558,11 @@ input[type=checkbox].task-list-item-checkbox {
   text-align: left;
 }
 
+.problem-statement img,
+.problem-samples img {
+    max-width: 100%;
+}
+
 .progress-bar-fixed {
   padding: 0 4px;
 }
