gcc: layout, log, picture, style

--- a/prologin/gcc/static/gcc/css/index.css
+++ b/prologin/gcc/static/gcc/css/index.css
@@ -1,6 +1,6 @@
 /* photo collage */
 section#collage {
-	background: center fixed url("../img/collage.jpg");
+	background: center fixed url("../img/collage_greyscale.jpg");
 	background-size: cover;
 	min-height: 70vh;
 }
