--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -15,19 +15,22 @@
 
 <section>
 	<!-- affiche actuelle et FAQ -->
-	<img src="" alt="Affiche GCC!">
-	<aside>
-		<h2>FAQ</h2>
-		<ul>
-			<!-- nth-child odd/even pour styliser question/reponse -->
-			<li></li>
-			<li></li>
-		</ul>
+  <div>
+  	<aside>
+      <img src="{% static "gcc/2018/poster.full.jpg" %}" alt="Affiche GCC!"">
+    </aside>
+  	<h2>FAQ</h2>
+  	<ul>
+  		<!-- nth-child odd/even pour styliser question/reponse -->
+  		<li></li>
+  		<li></li>
+  	</ul>
+  </div>
 </section>
 
-<section>
-	<!-- Inscriptions encore ouvertes (grille) -->
-</section>
+<!-- <section>
+	Inscriptions encore ouvertes (grille)
+</section> -->
 
 <section id="newsletter-signup">
 	<!-- Form signup newsletter -->
@@ -38,7 +41,7 @@
 	</form>
 </section>
 
-<section>
-	<!-- Sponsors -->
-</section>
+<!-- <section>
+	Sponsors
+</section> -->
 {% endblock %}
