--- a/prologin/gcc/static/gcc/css/application.css
+++ b/prologin/gcc/static/gcc/css/application.css
@@ -79,6 +79,7 @@
 }
 
 /* List of labels displayed on the right */
+
 .applicant-list .label-list {
     float: right;
 }
@@ -108,6 +109,7 @@
 }
 
 /* Table for generic informations on the candidate */
+
 .applicant-list .recap {
     width: 100%;
 }
@@ -118,6 +120,7 @@
 }
 
 /* Form */
+
 .applicant-list h5 {
     font-size: 13px;
     color: lightblue;
@@ -127,4 +130,49 @@
 .applicant-list p {
     margin: 5px 5px 5px 10px;
     /* color: lightgreen; */
+}
+
+/* Dropdown menu to add labels */
+
+.labeladd-btn {
+    color: var(--color5);
+    font-size: 14px;
+    border: none;
+    background: none;
+    float: right;
+    padding: 0 6px;
+    margin-left:  5px;
+    border: 1px dotted var(--color5);
+    border-radius: 10px;
+    margin-left: 5px;
+}
+
+.labeladd-dropdown {
+    display: inline-block;
+    position: relative;
+    float: right;
+}
+
+.labeladd-dropdown-content {
+    position: absolute;
+    display: none;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.labeladd-dropdown-content a {
+    color: white;
+    padding: 3px 5px;
+    font-size: 9pt;
+    text-decoration: none;
+    display: block;
+    min-width: 100px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.labeladd-dropdown-content a:hover {
+    background-color: var(--color5);
+}
+
+.labeladd-dropdown:hover .labeladd-dropdown-content {
+    display: block;
 }
