--- a/prologin/contest/templates/contest/qualification-summary.html
+++ b/prologin/contest/templates/contest/qualification-summary.html
@@ -174,6 +174,7 @@ The points you score for solving this year problems will be accounted for your s
             {% bootstrap_field form.contestant.preferred_language layout='horizontal' %}
             {% bootstrap_field form.contestant.shirt_size layout='horizontal' %}
             {% bootstrap_field form.contestant.assignation_semifinal_wishes layout='horizontal' %}
+            {% bootstrap_field form.contestant.learn_about_contest layout='horizontal' %}
             {% bootstrap_field form.user.epita layout='horizontal' %}
            <button type="submit" class="btn btn-primary btn-lg btn-block">
             <i class="fa fa-paper-plane-o"></i> {% trans "Save application" %}
