--- a/prologin/gcc/templates/gcc/index.html
+++ b/prologin/gcc/templates/gcc/index.html
@@ -12,8 +12,8 @@
 	<!-- Logo et collage -->
   <div>
   	<a href="{% url "home" %}"></a>
-    <img src="{% static "img/logo-squeletton.png" %}" style="float: left; max-width: 150px;" />
-    <p style="font-size: 24px; text-shadow: black 0px 0px 4px;">
+    <img src="{% static "img/logo-squeletton.png" %}" />
+    <p>
       Les stages Girls Can code! sont des stages gratuits d’initiation à l’informatique pour les collégiennes et lycéennes organisé par l’association Prologin.
     </p>
   </div>
