--- a/prologin/gcc/templates/gcc/about.html
+++ b/prologin/gcc/templates/gcc/about.html
@@ -4,10 +4,45 @@
 
 {% block content %}
 <section>
-	<h1>À propos de GCC!</h1>
-	<p>GCC! est un stage d'informatique créé et organisé par l'association
-	Prologin</p>
-	<!--TODO: put real content -->
+  <div>
+  	<h1>Le stage</h1>
+  	<p>
+      Le stage Girls Can Code! est l'occasion rêvée pour rencontrer découvrir ou progresser en programmation et rencontrer d'autres filles intéressées par la programmation.
+      Cette année, plusieurs stages seront organisés :
+      <ul>
+        <li>du 26 août au 31 août à Paris.</li>
+        <li>du 26 août au 31 août à Lyon.</li>
+      </ul>
+    </p>
+    <p>
+      Les stages durent une semaine au cours de laquelle seront proposés des travaux pratiques de programmation sur des sujets divers, quelques conférences données par des femmes travaillant dans l'informatique et la semaine se termine sur la mise en place d’un petit projet qui laisse place à la créativité !
+      Les exercices proposés ont une difficulté très progressive, et le but est que chacun avance à son rythme et en s’amusant.
+      Le stage ne requiert pas des participantes d’avoir déjà un quelconque niveau en informatique, simplement un intérêt et de la motivation.
+    </p>
+    <p>
+      Les participantes sont encadrées tout au long de la semaine par des étudiantes et étudiants en informatique bénévoles.
+      En plus de la logistique, l’aide sur les exercices, ils peuvent ainsi parler de leurs parcours scolaire et présenter différents métiers de l'informatique.
+    </p>
+    <p>
+      Les stages sont gratuits, les repas du midi ainsi que le repas de fin de stages sont offerts aux participantes.
+      L'hébergement et le transport jusqu'au lieu du stage n’est en revanche pas pris en charge par l’association.
+      Cependant si la question de l'hébergement est vraiment problématique et vous empêcherait de participer au stage malgré votre motivation, écrivez-nous à info@prologin.org et nous discuterons de l’attribution potentielle d’uned’une potentielle bourse.
+    </p>
+    <h2>Modalités</h2>
+    <p>
+      <ul>
+        <li>Être une fille pasnon encore bachelière</li>
+        <li>Remplir le formulaire de candidature</li>
+        <li>Habiter dans l'Union européenne ou en Suisse</li>
+      </ul>
+    </p>
+    <h2>Une question ?</h2>
+    <p>
+      Vous pouvez contacter notre équipe sur la page Nous contacter.
+      Nous serons ravis de répondre à vos questions et vous aider à organiser au mieux votre participation.
+    </p>
+  </div>
+
 	<a class="halo-button" href="{% url "gcc:team_index" %}">Découvrir l'équipe</a>
 </section>
 {% endblock %}
