--- a/prologin/gcc/templates/gcc/ressources.html
+++ b/prologin/gcc/templates/gcc/ressources.html
@@ -13,18 +13,31 @@
     <p>
       Il y a beaucoup de ressources sur internet qui peuvent te permettre de découvrir l’informatique mais il est parfois difficile de s'orienter dans tous les contenus, nous détaillons quelques ressources particulièrement intéressantes.
     </p>
+  </div>
+</section>
+<section>
+  <div>
     <h2><small>Premier point :</small> Quel langage de programmation ?</h2>
     <p>
       Coder c’est décrire des opération que la machine exécutera, et pour communiquer avec la machine on doit choisir au préalable dans quel langage on va lui parler.
       Il existe de très nombreux langages de programmation avec chacun leurs spécificités.
       Dans les stages nous enseignons principalement le Python, c’est un langage assez facile à prendre en main (comparé à d’autre...) mais qui permet à la fois beaucoup d’utilisations, par exemple il est utilisé pour coder Youtube.
     </p>
+  </div>
+</section>
+<section>
+  <div>
     <h2><small>Deuxième point :</small> Commencer à coder</h2>
     <p>
       Il y a quelques notions de base d’informatique dont on se sert tout le temps, il faut donc commencer par là, lire quelles explication et faire quelques exercices pour ça tu peux par exemple aller sur :
       France IOI : ils offrent une plateforme d'apprentissage avec des exercices de tous les niveaux, le tout gratuit et entièrement en français !
       Codeacademy : si tu parles un peu anglais ça peut être une bonne ressource, sinon c’est plus compliqué...
     </p>
+  </div>
+</div>
+</section>
+<section>
+  <div>
     <h2><small>Troisième point :</small> Se lancer dans ce qui nous plait !</h2>
     <p>
       L’avantage quand on apprend l'informatique c’est qu'on peut vraiment en faire ce qu’on veut. Il y a beaucoup de sous domaine et d'applications en informatique et pour continuer à coder c’est beaucoup plus motivant de trouver quelque chose qui nous plait. Voilà quelques exemples :
